--- a/style.css
+++ b/style.css
@@ -11,12 +11,13 @@
     height: calc(100vh - 70px);
 
 }
-.search{
+.searchArea{
     margin-left: 20px;
     padding-top: 20px;
     margin-bottom: 15px;
 }
 .history{
+    cursor: pointer;
     width: 325px;
     margin-left: 20px;
 }
